# Lambda

./: .ocamlformat  README.md  ast.ml  commandline.ml  dune  dune-project  interpreter.ml  lambda.ml  lexer.mll  main.ml  parser.mly  printer.ml
lib/: ast.ml  dune  interpreter.ml  lambda.ml  lexer.mll  parser.mly  printer.ml  std.lambda
res/: library.lambda
test/: 1.t  10.t  11.t  12.t  13.t  14.t  15.t  16.t  17.t  18.t  19.t  2.t  20.t  21.t  22.t  23.t  24.t  25.t  26.t  27.t  28.t  29.t  3.t  30.t  4.t  5.t  6.t  7.t  8.t  9.t  dune
test/inputs/: 12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  9.txt
tests/: 1.t  10.t  11.t  12.t  13.t  14.t  15.t  16.t  17.t  18.t  19.t  2.t  20.t  21.t  22.t  23.t  24.t  25.t  3.t  4.t  5.t  6.t  7.t  8.t  9.t  dune
tests/inputs/: 10  11  12  13  14  15  16  17  18  19  20  21  22  23  24  25  4
