(cram
 (deps
  ../main.exe
  ../lib/std.lambda
  inputs/1
  inputs/2
  inputs/3
  inputs/4
  inputs/5
  inputs/6
  inputs/7
  inputs/8
  inputs/9
  inputs/10
  inputs/11
  inputs/12
  inputs/13
  inputs/14
  inputs/15
  inputs/16
  inputs/17
  inputs/18
  inputs/19
  inputs/20
  inputs/21
  inputs/22
  inputs/23
  inputs/24
  inputs/25))
